--- a/expressjs-blog/package.json
+++ b/expressjs-blog/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mocha": "^7.1.2",
     "mongoose": "^5.9.10"
+  },
+  "devDependencies": {
+    "supertest": "^4.0.2"
   }
 }
